--- a/css/style.css
+++ b/css/style.css
@@ -239,10 +239,10 @@ aside{
 }
 
 .tires > span, .wheels > span, .bolts > span{
-	text-transform: uppercase;
-	font-size: 13px;
-	color: #465961;
 	font-family: "Lucida Sans Unicode", sans-serif;
+	font-size: 14px;
+	color: #114165;
+	text-transform: uppercase;
 	letter-spacing: 1.1px;
 }
 
@@ -250,16 +250,14 @@ aside{
 	font-family: "Lucida Sans Unicode", sans-serif;
 	font-size: 13px;
 	margin-top: 4px;
-	list-style-type: circle;
 	margin-left: 13px;
 	margin-bottom: 0px;
 }
 
-
 .tires_list > li, .wheels_list > li, .bolts_list > li{
 	margin-bottom: 5px;
+	list-style-type: circle;
 }
-
 
 .tires_list > li > a, .wheels_list > li > a, .bolts_list > li > a{
 	text-decoration: none;
@@ -267,20 +265,26 @@ aside{
 	margin-left: -6px;
 }
 
-.tires_list>li>a:hover, .wheels_list >li>a:hover, .bolts_list>li>a:hover{
-	text-decoration: underline;
-	font-style: oblique;
+.tires_list>li:hover, .wheels_list >li:hover, .bolts_list>li:hover{
+	font-style: italic;
 	font-family: Arial;
 	font-size: 14px;
 	font-weight: bold;
+	list-style-image: url(../img/list_marker2.png);
 }
 
+.tires_list>li>a:hover, .wheels_list>li>a:hover, .bolts_list>li>a:hover{
+	border-bottom: 2px solid #6a788b;
+	color: #0c3256;
+}
+        
 main{
 	width: 526px;
 	background: linear-gradient(to top, #94a7b0, #e4e7e8);
 	margin: 0 auto;
-	padding: 14px 0px 0px 24px;
+	padding: 15px 0px 0px 24px;
 	box-sizing: border-box;
+	font-family: "Lucida Sans Unicode", sans-serif;
 }
 
 figure{
@@ -320,15 +324,13 @@ figcaption{
 
 .image_text_up{
 	color: #206988;
-	font-family: "Lucida Sans Unicode", sans-serif;
-	font-size: 15px;
 	font-weight: bold;
 	line-height: 10px;
+	font-size: 15px;
 }
 
-.iimage_text_down{
+.image_text_down{
 	color: #1f2528;
-	font-family: "Lucida Sans Unicode", sans-serif;
 	font-size: 13px;
 }
 
@@ -414,13 +416,13 @@ input[type=checkbox]:checked + label:before {
 }
 
 .partners{
-	margin: 43px auto;
-	margin-bottom: 22px;
+	margin: 38px auto;
+	margin-bottom: 24px;
 }
 
 .partners>img{
-	margin-right: 7px;
-	vertical-align: top;
+	margin-right: 8px;
+	vertical-align: middle;
 }
 
 footer{
@@ -436,8 +438,8 @@ footer>a{
 	text-decoration: none;
 	font-family: Arial, sans-serif;
 	font-size: 12px;
-	padding-left: 13px;
-	padding-right: 6px;
+	padding-left: 9px;
+	padding-right: 10px;
 }
 
 footer>a:hover{
