--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body{
 	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
 	font-family: "Lucida sans unicode", sans-serif;
 	padding-left: 5px;
+	padding-bottom: 1px;
 	margin-left: 18px;
 	margin-right: 15px;
 	display: flex;
@@ -375,8 +376,8 @@ figcaption{
 	display: none;
 }
 
-.brands_choice>label, .wheels_choice>label{
-	display: inline-block;
+.brands_choice>form>label, .wheels_choice>form>label{
+	display: block;
 	cursor: pointer;
 	padding-top: 2px;
 	padding-left: 27px;
@@ -386,7 +387,6 @@ figcaption{
 
 label:before{
 	content: '  ';
-	display: inline-block;
 	width: 6px;
 	height: 6px;
 	border-left: 2px solid #1c4360;
@@ -435,11 +435,12 @@ input[type=checkbox]:checked + label:before {
 }
 
 footer{
-	height: 116px;
+	height: 100px;
 	width: 910px;
 	background-color: #213a4d;
 	text-align: center;
 	padding-top: 8px;
+	box-sizing: border-box;
 }
 
 footer>a{
