--- a/css/style.css
+++ b/css/style.css
@@ -372,40 +372,20 @@ figcaption{
 	font-size: 13px;
 }
 
-.brands_choice>[type="checkbox"], .wheels_choice>[type="checkbox"]{
-	display: none;
+ .right{
+ 	width: 107px;
 }
 
-.brands_choice>form>label, .wheels_choice>form>label{
-	display: block;
-	cursor: pointer;
-	padding-top: 2px;
-	padding-left: 27px;
-	position: relative;
-	margin-bottom: 1px;
+.wheels_brand, .tires_brand {
+display: block;
+cursor: pointer;
+
 }
 
-label:before{
-	content: '  ';
-	width: 6px;
-	height: 6px;
-	border-left: 2px solid #1c4360;
-	border-top: 2px solid #1c4360;
-	border-right: 1px solid #1c4360;
-	border-bottom: 1px solid #1c4360;
-	box-shadow: 0 0 2px;
-	position: absolute;
-	top: 7px;
-	left: 5px;
-}
-
-input[type=checkbox]:checked + label:before {
-	content: "\2713";
-	text-align: center;
-	font-size: 11px;
-	color: #1c4360;;
-	font-weight: bold;
-	line-height: 6px;
+.brands_choice>label>[type="checkbox"], .wheels_choice>label>[type="checkbox"]{
+	margin-top: 7px;
+	margin-right: 8px;
+	margin-bottom: 0px;
 }
 
 [type="submit"]{
