--- a/css/style.css
+++ b/css/style.css
@@ -284,10 +284,10 @@ aside{
 
 .tires_list>li>a:hover, .wheels_list>li>a:hover, .bolts_list>li>a:hover{
 	color: #0c3256;
-	  border-bottom: 2px solid #6a788b;
+	border-bottom: 2px solid #6a788b;
 
 }
-        
+
 main{
 	width: 526px;
 	background: linear-gradient(to top, #94a7b0, #e4e7e8);
@@ -372,14 +372,19 @@ figcaption{
 	font-size: 13px;
 }
 
- .right{
- 	width: 107px;
+.right{
+	width: 107px;
 }
 
 .wheels_brand, .tires_brand {
-display: block;
-cursor: pointer;
+	position: relative;
+	display: block;
+	cursor: pointer;
+}
 
+.text_input1, .text_input2, .text_input3, .text_input4, .text_input5, .text_input6{
+	position: absolute;
+	top: 4px;
 }
 
 .brands_choice>label>[type="checkbox"], .wheels_choice>label>[type="checkbox"]{
